--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								<i class="fa fa-comments-o"></i>
 								<div class="service-box">
 									<h3>App Development</h3>
-									<p>Three years of experience in app development, specializing in Android and Web applications.</p>
+									<p>Three years of experience in app development, specializing in Android and Web applications</p>
 								</div>
 							</div>  <!-- service -inner  -->
 							<div class="service-inner wow fadeInRight" data-wow-delay=".8s">
@@ -252,7 +252,7 @@
 				<div class="clearfix"></div>
 				<div class="col-md-6 col-sm-6 wow fadeInLeft">
 					<div class="resume-inner">
-						<p>I am currently a senior at Thomas Jefferson High School for Science and Technology, as was as a rising freshman for Harvard College's Class of 2020.
+						<p>I am currently a senior at Thomas Jefferson High School for Science and Technology, as well as a rising freshman for Harvard College's Class of 2020.
 						<br>
 						
 					</div>
