Inserted testimonial from Cheryl Mensah

--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@
 								<h4 class="client-name">Matthew Huo - High School Classmate</h4>
 							</div>
 							<div class="item ">
+								<p>"Jake is not only a great friend, but a wonderful tutor. He always takes time to help out others, and I am so grateful for all the help he has given me over the years.”</p>
+
+								<h4 class="client-name">Cheryl Mensah - High School Classmate</h4>
+							</div>
+
+							<div class="item ">
 								<p>"Pure swag.”</p>
 
 								<h4 class="client-name">Jaehyun Jeon - High School Classmate</h4>
