Removed resume for updating

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				<div class="col-md-12 text-center wow fadeInUp">
 					<h2 class="heading-title">Resume</h2>
 					<p>Feel free to download my resume for additional information regarding my professional experience.  </p>
-					<form method="get" action="JakeCuiResume.pdf">
+					<form method="get" action="JakeCuiResume.pdf pump">
 					<button class="btn btn-default featured" type="submit">Download!</button>
 					</form>
 
