--- a/index.html
+++ b/index.html
@@ -391,6 +391,13 @@
 
 								<h4 class="client-name">Jaehyun Jeon - High School Classmate</h4>
 							</div>
+
+							<div class="item ">
+								<p>"Jake Cui has a huge schlong.”</p>
+
+								<h4 class="client-name">Ari Hatzimemos - Harvard College Classmate</h4>
+							</div>
+
 						</div>
 					</div>
 				</div>
