--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				<div class="col-md-12 text-center wow fadeInUp">
 					<h2 class="heading-title">Resume</h2>
 					<p>Feel free to download my resume for additional information regarding my professional experience.  </p>
-					<form method="get" action="JakeCuiCV.pdf pump">
+					<form method="get" action="JakeCuiCV.pdf">
 					<button class="btn btn-default featured" type="submit">Download!</button>
 					</form>
 
@@ -254,7 +254,7 @@
 				<div class="clearfix"></div>
 				<div class="col-md-6 col-sm-6 wow fadeInLeft">
 					<div class="resume-inner">
-						<p>Currently studying Computer Science at Harvard, while dabbling in economics, sociology, and philosphy.
+						<p>Currently studying Computer Science at Harvard, while dabbling in economics, sociology, and philosophy.
 						<br>
 						
 					</div>
@@ -393,7 +393,7 @@
 							</div>
 
 							<div class="item ">
-								<p>"Jake Cui has a huge schlong.”</p>
+								<p>"Jake Cui is the love of my life”</p>
 
 								<h4 class="client-name">Ari Hatzimemos - Harvard College Classmate</h4>
 							</div>
