--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@
 						    <li data-target="#testimonial-carousel" data-slide-to="1"></li>
 						    <li data-target="#testimonial-carousel" data-slide-to="2"></li>
 							<li data-target="#testimonial-carousel" data-slide-to="3"></li>
+							<li data-target="#testimonial-carousel" data-slide-to="4"></li>
+							<li data-target="#testimonial-carousel" data-slide-to="5"></li>
 
 						  </ol>
 						<div class="carousel-inner">
