update harv gpa

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<div class="resume-box wow fadeInDown" data-wow-delay=".2s">
 							<h3 class="resume-title">Harvard College</h3>
 							<p class="resume-sub">A.B In Computer Science  /  August 2016 - May 2020</p>
-							<div class="result">GPA N/A</div>
+							<div class="result">3.8 GPA</div>
 
 							<hr>
 
