--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="col-md-7 col-sm-12 pull-right">
 					<div class="profile-desc wow fadeInRight">
 						<h2 class="heading-title">about me</h2>
-						<p>I am a freshman at Harvard College currently planning to concentrate in Computer Science. I am passionate about technology, experimental therapeutics, computer science, and biomedical discovery. 
+						<p>I am a sophomore at Harvard College currently planning to concentrate in Computer Science. I am passionate about technology, experimental therapeutics, computer science, and biomedical discovery. 
 
 						For the first three years of my high school career, I pursued biomedical cancer research at Peking University and Georgetown University, covering a wide range of topics including but not limited to nanotechnology, organic chemistry, and oncology. Recently, I have developed a passion for computational biology after having the pleasure of working at Harvard Medical School's Boston Children Hospital Informatics Program. There, I investigated machine learning and other applications of computer science to medical research.
 </p>
@@ -313,7 +313,7 @@
 
 				<div class="col-md-6 col-sm-6 wow fadeInLeft">
 					<div class="resume-inner">
-						<p>Throughout my high school career, I've had the privelage of working at various prestigious research institutions over the summer. 					<br>
+						<p>Throughout my high school career, I've had the privilege of working at various prestigious research institutions over the summer. For additional internship experience details, please view my <a href = #section-resume> resume. </a>		<br>
 						<br>
 						Each position was acquired through tedious application processes to local instutitions or through research programs such as MIT's Research Science Institute.</p>
 					</div>
@@ -416,7 +416,7 @@
 				<div class="col-md-12 text-center wow fadeInUp">
 					<div class="section-heading">
 						<h2 class="heading-title">Research Portfolio</h2>
-						<p>A compiliation of executive summaries and abstracts from my previous research projects. If you are interested in learning more or still have potential questions, please feel free to contact me via phone or email. Contact information can be found at the bottom of this site.</p>
+						<p>A compiliation of executive summaries and abstracts from my previous research projects. If you are interested in learning more or still have potential questions, please feel free to contact me via phone or email. Contact information can be found at the bottom of this site. </p>
 					</div>
 				</div>
 			</div>
@@ -472,7 +472,7 @@
 				<div class="col-md-12 wow fadeInLeft text-center">
 						<p>Please feel free to email or call me with any personal or professional inquiries.</p>
 						<div class="location">
-							<p>Location: Great Falls, VA, 22066</p>
+							<p>Location: Cambridge, MA</p>
 							<p>Email: <a>jake_cui@college.harvard.edu</a></p>
 							<p>Phone: <a>703-975-5578</a><p>
 						</div>
@@ -491,7 +491,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h4>Copyright 2016 Jake Cui - Built With Passion</h4>
+					<h4>Copyright 2017 Jake Cui - Built With Passion</h4>
 
 					<ul class="socail-link list-inline">
 						<li><a href="https://twitter.com/JakeDaBigSnake1"><i class="fa fa-twitter"></i></a></li>
